fix: tweak code block overflow scroll

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,7 +1,11 @@
 @tailwind base;
 
+pre {
+  @apply px-2 bg-red-100;
+}
+
 pre code {
-  @apply inline-block max-w-full overflow-x-scroll py-1 bg-red-100;
+  @apply inline-block max-w-full py-2 overflow-x-scroll;
 }
 
 @tailwind components;
